<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signInName"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:focusable="true"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signInReEnterPassword"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/addressOneSignUp"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/address_line_one"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/addressTwoSignUp"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/address_line_two"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/addressThreeSignUp"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/address_line_three"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/zipCodeSignUp"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/zip_code"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/company_color_back"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/sign_up"
            android:textColor="#FFFF" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>