<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/agriculture" />

        <EditText
            android:id="@+id/usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_password"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/company_color_back"
            android:text="@string/login"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/troubleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/trouble_with_login"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <Button
            android:id="@+id/signInLoginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/company_color_back"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>